--- a/Observability/Vagrantfile
+++ b/Observability/Vagrantfile
@@ -69,7 +69,8 @@ Vagrant.configure("2") do |config|
   #
   #   # Customize the amount of memory on the VM:clear
 
-    vb.memory = "4096"
+    vb.memory = "24576"
+    vb.cpus = 16
     #vb.memory = "2048"
     vb.name = "k3s"
   end
