--- a/Observability/manifests/app/frontend.yaml
+++ b/Observability/manifests/app/frontend.yaml
@@ -12,8 +12,8 @@ spec:
       labels:
         app: frontend
       annotations:
-        prometheus.io/scrape: 'true'
-        prometheus.io/port: '8080'
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "8080"
     spec:
       containers:
       - name: frontend
@@ -25,11 +25,32 @@ apiVersion: v1
 kind: Service
 metadata:
   name: frontend-service
+  labels:
+    app: frontend
 spec:
   selector:
     app: frontend
   ports:
-    - port: 8080
+    - name: http          # Important for ServiceMonitor discovery
+      port: 8080
       targetPort: 8080
   type: LoadBalancer
+---
+apiVersion: monitoring.coreos.com/v1
+kind: ServiceMonitor
+metadata:
+  name: frontend-monitor
+  labels:
+    release: prometheus   # Must match your Prometheus deployment's release label
+spec:
+  selector:
+    matchLabels:
+      app: frontend
+  namespaceSelector:
+    matchNames:
+      - default
+  endpoints:
+    - port: http
+      path: /metrics
+      interval: 15s
 
